tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_cannot_pass_unconstrained_function_to_regular_function/execute__tests__noirc_frontend_tests_cannot_pass_unconstrained_function_to_regular_function_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Converting an unconstrained fn to a non-unconstrained fn is unsafe
  ┌─ src/main.nr:4:24
  │
4 │         expect_regular(func);
  │                        ----
  │

Aborting due to 1 previous error
