tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_cannot_pass_unconstrained_function_to_regular_function/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Converting an unconstrained fn to a non-unconstrained fn is unsafe
  ┌─ src/main.nr:4:24
  │
4 │         expect_regular(func);
  │                        ----
  │

Aborting due to 1 previous error
